# Proect-data

./: .env  .gitignore  README.md  docker-compose.yaml  load_data.ipynb  p1.py  prepared_data.csv  prepared_data.ipynb  tpot.py
dags/: p1.py
dvc_example/: pyproject.toml
dvc_example/src/data/: data_download
